# must-tui

./: .gitignore  404.html  CHANGELOG.md  README.md  RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
developer/: index.html
docs/: api.md  developer.md  env.md  index.md  usage.md  user.md
docs/stylesheets/: api.css
env/: index.html
search/: search_index.json
src/must_tui/: __main__.py  dialogs.py  matplotlib_bridge.py  mib.py  mpl_plotter.py  must.py  must_app.py  must_app.tcss  parameter_cache.py
tests/: test_repl_helpers.py
usage/: index.html
user/: index.html
