[project]
name = "must-tui"
version = "0.1.4"
description = "A simple TUI to inspect MUST telemetry and housekeeping."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohttp",
    "cgse-common",
    "pandas",
    "requests",
    "rich",
    "textual",
    "textual-dev",
    "textual-plot",
    "textual-plotext",
    "textual-timepiece",
    "thefuzz",
]
authors = [
    { name = "Rik Huygen", email = "rik.huygen@kuleuven.be" }
]

[project.scripts]
must-tui = "must_tui.__main__:main"

[project.optional-dependencies]
pcot = [
    "plato-pcot-scripts",
]

[tool.uv]
package = true

[tool.uv.sources]
plato-pcot-scripts = { git = "ssh://git@github.com/IvS-KULeuven/plato-pcot-scripts.git", branch = "main" }
cgse-common = { path = "../cgse/libs/cgse-common", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/must_tui"]

[tool.hatch.build.targets.wheel.force-include]
"src/data" = "must_tui/data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
